Modified data sql file to create records on tables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
 #    hibernate:
 #      ddl-auto: create
     #database-platform: org.hibernate.dialect.H2Dialect
@@ -19,3 +20,5 @@ spring:
   h2:
     console:
       enabled: true
+      settings:
+        web-allow-others: true
